# typescript-axios-client-generated/models/index.ts
@@ -24,6 +24,10 @@ export * from './get-event-response-document';
 export * from './get-user-response-document';
 export * from './iuser';
 export * from './ivoting';
+export * from './invite-user-request-data';
+export * from './invite-user-request-document';
+export * from './invite-user-response-data';
+export * from './invite-user-response-document';
 export * from './patch-event-motion-request-data';
 export * from './patch-event-motion-request-document';
 export * from './patch-event-request-data';
