# typescript-axios-client-generated/models/invite-user-request-document.ts
@@ -1,0 +1,27 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Vokko
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { InviteUserRequestData } from './invite-user-request-data';
+/**
+ * 
+ * @export
+ * @interface InviteUserRequestDocument
+ */
+export interface InviteUserRequestDocument {
+    /**
+     * 
+     * @type {InviteUserRequestData}
+     * @memberof InviteUserRequestDocument
+     */
+    data?: InviteUserRequestData;
+}
