# typescript-axios-client-generated/models/invite-user-response-data.ts
@@ -1,0 +1,26 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Vokko
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * 
+ * @export
+ * @interface InviteUserResponseData
+ */
+export interface InviteUserResponseData {
+    /**
+     * 
+     * @type {boolean}
+     * @memberof InviteUserResponseData
+     */
+    hasBeenSentSuccessfully?: boolean;
+}
